--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+djangorestframework = "^3.15.2"
+django = "^4.2"
 
 
 [build-system]
