--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "antd": "^5.21.1",
+    "axios": "^1.7.7",
     "jotai": "^2.10.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
@@ -27,6 +28,12 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "msw": "^2.4.9",
     "vite": "^5.4.1"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
